--- a/templates/details.html
+++ b/templates/details.html
@@ -18,6 +18,22 @@
     {{ time | format_date }}
     <br><hr><br>
 
+    <!-- NOTE TO SELF
+    form action is for the function, not the route
+    -->
+
+    <form action = "/profile", method = "POST">
+        <button type="submit">View Profile</button>
+    </form>
+    <form action = "/courses", method = "POST">
+        <button type="submit">View Courses</button>
+    </form>
+    <form action = "/assignments", method = "POST">
+        <button type="submit">View Assignments</button>
+    </form>
+
+
+    <br><hr><br>
     {% for day, asses in due_asses.items() %}
         Due for {{ day.strftime("%B %d, %Y") }}
         <br>
