Add get_due_assignments function in User

--- a/app/templates/details.html
+++ b/app/templates/details.html
@@ -13,6 +13,7 @@
 <body>
     <!-- TODO: For every completion of an assignment, get feedback for AI fine tuning -->
 
+    <!-- TODO: Display Per Day  -->
     {% extends "base.html" %}
 
     {% block content %}
