Integrate AI-generatedfrontend for templates

--- a/app/templates/assignments.html
+++ b/app/templates/assignments.html
@@ -3,15 +3,15 @@
 {% block content %}
 <h1>Assignments</h1>
 {% for course_name, course_assignments in assignments.items() %}
-    <div class="course-assignments">
+    <div class="assignments-list">
         <h2>{{ course_name }}</h2>
         {% if course_assignments %}
             <ul>
             {% for assignment in course_assignments %}
                 <li>
-                    {{ assignment.name }}
+                    <h3>{{ assignment.name }}</h3>
                     {% if assignment.due_at %}
-                        <br>Due: {{ assignment.due_at|format_date }}
+                        <p>Due: {{ assignment.due_at|format_date }}</p>
                     {% endif %}
                 </li>
             {% endfor %}
